[package]
name = "operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
nix = { version = "0.27.1", features = ["process"] }
serde =  { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"

