[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "operator"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
lazy_static = "1.4.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["process", "poll", "signal", "fs"] }
serde =  { version = "1.0.189", features = ["derive" ] }
toml = "0.8.2"

